tests/baselines/reference/noImplicitExtensionNameWithEmitExtension.errors.txt
tests/cases/compiler/1.ts(3,1): error TS6511: Import with an implicit extension name is not allowed. Try to import from './0.mjs' instead.


==== tests/cases/compiler/0.ts (0 errors) ====
    export default 0
    
==== tests/cases/compiler/1.ts (1 errors) ====
    import num from './0.mjs'
    // should be error
    import num2 from './0'
    ~~~~~~~~~~~~~~~~~~~~~~
!!! error TS6511: Import with an implicit extension name is not allowed. Try to import from './0.mjs' instead.
    num + num2
    